<resources>
    <string name="app_name">TMQApp</string>
    <string name="title_question">Questionaire</string>
    <string name="title_home">Dashboard</string>
    <string name="title_new">New Task</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_new_task">NewTask</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_questionaire">Questionaire</string>
    <string name="deafault_task_amaount">0</string>
    <string name="dashboard_first_string">You currently have:</string>
    <string name="dashboard_second_string">Tasks</string>
    <string name="dashboard_third_string">Your TMQ Score is:</string>
    <string name="dashboard_fourth_string">69/100</string>


    <!--Questionaire Questions-->

    <!--Category Strings-->
    <string name="category_A">Category A</string>
    <string name="category_B">Category B</string>
    <string name="category_C">Category C</string>

    <!--Category Description Strings-->
    <string name="category_A_Description">Short-Range Planning</string>
    <string name="category_B_Description">Time Attitudes</string>
    <string name="category_C_Description">Long-Range Planning</string>



    <string name="category_A_question_1">Do you make a list of the things you have to do each day?</string>
    <string name="category_A_question_2">Do you plan your day before you start it?</string>
    <string name="category_A_question_3">Do you make a schedule of the activities you have to do on work days?</string>
    <string name="category_A_question_4">Do you write a set of goals for yourself for each day?</string>
    <string name="category_A_question_5">Do you spend time each day planning?</string>
    <string name="category_A_question_6">Do you have a clear idea of what  you want to accomplish during the next week?</string>
    <string name="category_A_question_7">Do you set and honor priorities?</string>

    <string name="category_B_question_1">Do you often find yourself doing things which interfere with your school-work simply because you hate to say No to people?</string>
    <string name="category_B_question_2">Do you feel you are in charge of your own time, by and large?</string>
    <string name="category_B_question_3">On an average class day do you spend more time with personal grooming than doing schoolwork?</string>
    <string name="category_B_question_4">Do you believe that there is room  for improvement  in the way you  manage your time?</string>
    <string name="category_B_question_5">Do you make constructive use of your time?</string>
    <string name="category_B_question_6">Do you continue unprofitable routines or activities?</string>

    <string name="category_C_question_1">Do you usually keep you desk clear of everything other than what you are currently working on?</string>
    <string name="category_C_question_2">Do you have a set of goals for the entire quarter?</string>
    <string name="category_C_question_3">The night  before  a major  assignment  is due, are you usually still working on it?</string>
    <string name="category_C_question_4">When you have several things to do, do you think  it is best to do a little bit of work on each one</string>
    <string name="category_C_question_5">Do you regularly review your class notes, even when a test is not imminent?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="questionaire_options"><item>0</item><item>1</item><item>2</item><item>3</item><item>4</item><item>5</item></string-array>
</resources>
