<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.weabros.tmqapp.QuestionaireC">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/title_activity_questionaire"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentBottom="false"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView9"
            android:paddingTop="5dp"
            android:text="@string/category_C"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_below="@+id/textView14"
            android:text="@string/category_C_Description"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView15"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:text="@string/category_C_question_1"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView16"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:text="@string/category_C_question_2"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView17"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:text="@string/category_C_question_3"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView18"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:text="@string/category_C_question_4"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView19"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:text="@string/category_C_question_5"
            android:textColor="@android:color/black" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView15"
            android:layout_toRightOf="@+id/textView16"
            android:layout_above="@+id/textView17" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView16"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_above="@+id/textView18" />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView17"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_above="@+id/textView19" />

        <Spinner
            android:id="@+id/spinner4"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView18"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_above="@+id/textView20" />

        <Spinner
            android:id="@+id/spinner5"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView19"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@+id/textView20" />

    </RelativeLayout>

</FrameLayout>
